--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,8 @@
 <div class="container">
+  <header>
+
+    <app-image-slider [sliderTitle]="['درباره‌ی ما']"></app-image-slider>
+  </header>
   <div class="smart-process">
     <h2>پردازش هوشمند معتمد کسب و کار</h2>
     <p>
@@ -25,7 +29,9 @@
       <span> 14012467598 </span>
       و شماره ثبت
       <span> 616501 </span>
-      و با سرمایه ثبتی 10میلیارد ریال به ثبت رسیده است.
+      و با سرمایه ثبتی
+      <span> 10 </span>
+      میلیارد ریال به ثبت رسیده است.
     </p>
     <p>
       مطابق با الزامات سازمان، شرکت معتمد تکسا جهت تحقق اهداف سازمان و شرکت،
