--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -51,7 +51,7 @@
               fill="white"
             />
           </svg>
-          <p>021-12345678</p>
+          <p id="phone">021-12345678</p>
         </div>
       </div>
       <div class="mail">
@@ -68,7 +68,7 @@
               fill="white"
             />
           </svg>
-          <p>info@taksa.ir</p>
+          <p id="mail">info@taksa.ir</p>
         </div>
       </div>
       <div class="location">
@@ -85,7 +85,7 @@
               fill="white"
             />
           </svg>
-          <p>تهران-خیابان جردن</p>
+          <p id="location">تهران-خیابان جردن</p>
         </div>
       </div>
     </div>
