--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <header>
+    <app-image-slider [sliderTitle]="['سوالات متداول']"></app-image-slider>
+  </header>
   <h2>سوالات متداول</h2>
   <div class="question-box">
     <div class="questions">
