--- a/src/app/services/services-menu/services-menu.component.html
+++ b/src/app/services/services-menu/services-menu.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+  <header>
+    <app-image-slider
+      [sliderTitle]="['سامانه معتمد مالیاتی تکسا']"
+      [sliderDescription]="['تخصص مالیاتی، آرامش مالی شما را تضمین می‌کند']"
+    ></app-image-slider>
+  </header>
   <div class="first-step">
     <h2>1 ایجاد رایگان صورتحساب</h2>
     <p>
