--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,7 +1,10 @@
 <div class="container">
-  <div class="image">
-    <app-image-slider></app-image-slider>
-  </div>
+  <header>
+    <app-navbar></app-navbar>
+    <app-image-slider
+      [sliderTitle]="['اتصال به سامانه مودیان با کلید تکسا']"
+    ></app-image-slider>
+  </header>
   <div class="guilds-approach">
     <h2>راهکار ویژه اصناف</h2>
     <h5>
