--- a/src/app/questions/questions.component.css
+++ b/src/app/questions/questions.component.css
@@ -7,11 +7,14 @@
   position: relative;
   width: 100%;
 }
+header {
+  width: 100%;
+}
 .container h2 {
   color: #204066;
   text-align: center;
   font-family: Anjoman;
-  font-size: 32px;
+  font-size: 32px !important;
   font-style: normal;
   font-weight: 700;
   line-height: 10px;
@@ -77,8 +80,8 @@
   content: "✓ ";
 }
 .persian-decimal > li:before {
-  font-size: 16px;
-  font-family: IranSansNum;
+  font-size: 16px !important;
+  font-family: IranSansNum !important;
 }
 ol {
   list-style-type: none;
