--- a/src/app/services/company/company.component.css
+++ b/src/app/services/company/company.component.css
@@ -1,74 +1,7 @@
-nav .taksa-logo {
-  /* background-color: red; */
-  width: 85px;
-  height: 75px;
-  margin: 0 15px;
-}
-.navbar {
-  padding: 16px 0 10px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 65px;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 22px;
-  color: #204066;
-  position: fixed;
-  left: -200;
-  background-color: #fff;
-  width: 100%;
-  z-index: 5;
-  box-shadow: 0px 0px 10px 0px rgba(32, 82, 149, 0.25);
-}
-.links a {
-  margin-left: 32px;
-}
-header {
-  font-family: IRANSansX;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 151px;
-  flex-wrap: nowrap;
-}
-.signin-btn {
-  font-family: inherit;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  color: #fff;
-  background-color: #204066;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 16px;
-}
-/* .img-slider {
-  background-image: url(../../assets/shared/images/Image-slider.png);
-  background-repeat: no-repeat;
-  width: 1440px;
-  height: 1000px;
-  margin: auto;
-} */
-hr {
-  border: 1px solid #fff;
-}
-.head {
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  /* align-items: center; */
-  box-shadow: 0 0 10px 0 rgba(32, 82, 149, 0.25);
-}
-.links a:hover {
-  cursor: pointer;
-}
 .container {
   display: flex;
   width: 100%;
   margin: 200px 0 0;
-  font-family: IranSansX;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -100,7 +33,7 @@ hr {
 }
 
 .bussiness-info form > input {
-  font-family: IranSansnum;
+  font-family: IranSansnum !important;
   width: 45%;
   height: 40px;
   padding: 8px 12px;
@@ -114,7 +47,7 @@ hr {
   width: 100%;
 }
 .bussiness-info form div label {
-  font-family: IranSansNum;
+  font-family: IranSansNum !important;
   margin: 0 8px 0 4px;
   color: #242424;
   font-size: 12px;
@@ -126,7 +59,6 @@ hr {
 }
 .bussiness-info form button {
   border-radius: 8px;
-  font-family: IranSansX;
   background: #f27f51;
   display: flex;
   width: 270px;
@@ -153,4 +85,12 @@ hr {
 .signin-btn:hover {
   cursor: pointer;
   opacity: 0.9;
+}
+.links a {
+  text-decoration: none;
+}
+.links a:active,
+.links a:visited,
+.link a:link {
+  color: inherit;
 }
