--- a/src/app/services/service2/service2.component.html
+++ b/src/app/services/service2/service2.component.html
@@ -1,4 +1,9 @@
 <div class="container">
+  <header>
+    <app-image-slider
+      [sliderTitle]="['اتصال به سامانه مودیان بصورت مستقیم']"
+    ></app-image-slider>
+  </header>
   <div class="image"></div>
   <div class="bullets">
     <svg
