--- a/src/app/services/services-menu/services-menu.component.css
+++ b/src/app/services/services-menu/services-menu.component.css
@@ -3,8 +3,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-
-  font-family: IranSansX;
+  width: 100%;
+}
+header {
   width: 100%;
 }
 .container .first-step,
@@ -18,21 +19,23 @@
   padding: 200px 0 0;
   position: relative;
   width: 100%;
+  text-align: center;
 }
+
 .first-step,
 .third-step {
   background: #f5f7fa;
 }
 .container h2 {
   color: #204066;
-  font-family: Anjoman;
+  font-family: Anjoman !important;
   font-weight: 700;
   line-height: 28px;
   margin: 0 0 60px;
 }
 .container h2::first-letter {
   color: rgba(242, 127, 81, 0.3);
-  font-family: IRANSansNum;
+  font-family: IRANSansNum !important;
   font-size: 128px;
   font-style: normal;
   font-weight: 900;
@@ -62,7 +65,6 @@
   color: #fff;
   font-size: 18px;
   font-weight: 500;
-  font-family: IranSansX;
   width: 273px;
   height: 51px;
   padding: 11.995px 26.988px;
@@ -122,7 +124,7 @@ hr {
 .packages .plus-package p,
 .packages .lite-package p,
 .independent-package p {
-  font-family: IranSansNum;
+  font-family: IranSansNum !important;
   color: #424242;
   font-size: 16px;
   font-weight: 700;
@@ -131,7 +133,6 @@ hr {
 .packages ul li,
 .independent-package ul li {
   color: #424242;
-  font-family: IRANSansX;
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
@@ -142,7 +143,6 @@ hr {
   border-radius: 11.995px;
   border: 1px solid #12b48b;
   background: #12b48b;
-  font-family: IranSansX;
   color: #fff;
   width: 273px;
   height: 51px;
