--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -3,7 +3,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: IranSansX;
+  width: 100%;
+}
+header{
   width: 100%;
 }
 .guilds-approach {
@@ -19,7 +21,7 @@
 .organization-approach h2 {
   margin: 200px 0 60px;
   color: #204066;
-  font-family: Anjoman;
+  font-family: Anjoman !important;
   font-size: 32px;
   font-weight: 700;
   line-height: 28px;
@@ -75,7 +77,7 @@ hr {
 .packages .plus-package p,
 .packages .lite-package p,
 .independent-package p {
-  font-family: IranSansNum;
+  font-family: IranSansNum !important;
   color: #424242;
   font-size: 16px;
   font-weight: 700;
@@ -84,7 +86,6 @@ hr {
 .packages ul li,
 .independent-package ul li {
   color: #424242;
-  font-family: IRANSansX;
   font-size: 16px;
   font-weight: 400;
   line-height: 28px;
@@ -95,7 +96,6 @@ hr {
   border-radius: 11.995px;
   border: 1px solid #12b48b;
   background: #12b48b;
-  font-family: IranSansX;
   color: #fff;
   width: 273px;
   height: 51px;
@@ -158,7 +158,4 @@ hr {
 .container button:hover {
   opacity: 0.8;
   cursor: pointer;
-}
-.image {
-  width: 100%;
 }
