--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: Iransansx !important;
+  box-sizing: border-box !important;
 }
 html {
   scroll-behavior: smooth;
@@ -24,9 +26,13 @@ html {
 .mat-expansion-panel {
   border: none;
   padding: 20px;
+  background: #f5f7fa !important;
 }
 .mat-expansion-panel-header-title {
   flex-basis: content;
+}
+.mat-expansion-panel-header {
+  background: #f5f7fa !important;
 }
 /* mat-expansion-indicator {
   display: flex;
@@ -43,7 +49,7 @@ mat-expansion-panel li {
   margin: 24px 0 0;
   color: #3d3d3d;
   /* text-align: right; */
-  font-size: 16px;
+  font-size: 16px !important;
   font-style: normal;
   font-weight: 500;
   line-height: 28px;
@@ -52,7 +58,7 @@ mat-accordion {
   width: 100%;
 }
 mat-expansion-panel p span {
-  font-family: IranSansNum;
+  font-family: IranSansNum !important;
 }
 mat-panel-title {
   color: #3d3d3d;
@@ -70,6 +76,3 @@ mat-panel-title {
   align-items: center;
   /* width: 100%; */
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
